<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HomeActivity">

    <ImageView
            android:layout_width="187dp"
            android:layout_height="89dp" app:srcCompat="@drawable/logo_isen" android:id="@+id/logo_isen"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/alt_description_logo"/>
    <TextView
            android:text="@string/homeActivity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/home_title"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/logo_isen"
            android:textSize="30sp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_message_24px"
            android:id="@+id/lifecycleImage"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/saveImage" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/home_title" android:background="@drawable/home_round_corners"
            android:padding="20dp"
            android:contentDescription="@string/alt_home_lifeCycle" tools:ignore="VectorDrawableCompat"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_sd_storage_24px"
            android:id="@+id/saveImage"
            app:layout_constraintStart_toEndOf="@+id/lifecycleImage"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lifecycleImage"
            app:layout_constraintBottom_toBottomOf="@+id/lifecycleImage" android:padding="20dp"
            android:background="@drawable/home_round_corners" android:contentDescription="@string/alt_home_save"
            tools:ignore="VectorDrawableCompat"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_phone_in_talk_24px"
            android:id="@+id/permissionsImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/webservicesImage"
            android:padding="20dp" android:background="@drawable/home_round_corners" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/lifeCycleText"
            android:contentDescription="@string/alt_home_permissions" tools:ignore="VectorDrawableCompat"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_cloud_download_24px"
            android:id="@+id/webservicesImage"
            app:layout_constraintStart_toEndOf="@+id/permissionsImage" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/permissionsImage"
            app:layout_constraintBottom_toBottomOf="@+id/permissionsImage" android:padding="20dp"
            android:background="@drawable/home_round_corners" android:contentDescription="@string/alt_home_webservices"
            tools:ignore="VectorDrawableCompat"/>
    <TextView
            android:text="@string/home_lifecycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lifeCycleText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lifecycleImage"
            app:layout_constraintStart_toStartOf="@+id/lifecycleImage"
            app:layout_constraintEnd_toEndOf="@+id/lifecycleImage"/>
    <TextView
            android:text="@string/home_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/saveImage" app:layout_constraintStart_toStartOf="@+id/saveImage"
            app:layout_constraintEnd_toEndOf="@+id/saveImage"/>
    <TextView
            android:text="@string/home_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/permissionsText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/permissionsImage"
            app:layout_constraintEnd_toEndOf="@+id/permissionsImage"
            app:layout_constraintStart_toStartOf="@+id/permissionsImage"/>
    <TextView
            android:text="@string/home_webservices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/webservicesText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/webservicesImage"
            app:layout_constraintStart_toStartOf="@+id/webservicesImage"
            app:layout_constraintEnd_toEndOf="@+id/webservicesImage"/>
    <Button
            android:text="@string/disconnect_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/disconnectButton"
            app:layout_constraintTop_toBottomOf="@+id/permissionsText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>
</android.support.constraint.ConstraintLayout>