<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.UserInfoActivity">

    <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content" android:id="@+id/infoTitle"
            android:text="@string/userinfo_title"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/firstNameLayout"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="56dp" android:id="@+id/firstNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoTitle"
            app:layout_constraintBottom_toTopOf="@+id/lastNameLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userinfo_firstname_hint" android:id="@+id/firstNameField"
                android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content" android:id="@+id/lastNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout"
            app:layout_constraintBottom_toTopOf="@+id/birthDate">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userinfo_lastname_hint" android:id="@+id/lastNameField" android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:text="@string/userinfo_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/birthDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/birthDateValue"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLayout" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/saveBtn"/>
    <TextView
            android:text="@string/userinfo_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/birthDateValue"
            app:layout_constraintTop_toTopOf="@+id/birthDate" app:layout_constraintBottom_toBottomOf="@+id/birthDate"
            app:layout_constraintStart_toEndOf="@+id/birthDate" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/userinfo_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/saveBtn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/birthDate" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/readBtn"/>
    <Button
            android:text="@string/userinfo_read_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/readBtn"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/saveBtn"
            app:layout_constraintHorizontal_bias="0.5"/>

</android.support.constraint.ConstraintLayout>