<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginTitle" android:text="@string/login_title"
            android:textSize="36sp" android:textStyle="bold" android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="128dp"
            android:layout_height="64dp" app:srcCompat="@drawable/logo_isen" android:id="@+id/loginLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/loginTitle"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/emailAddressLayout" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo"
            android:layout_marginTop="32dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_id_hint" android:inputType="textEmailAddress" android:id="@+id/emailInput"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pw_hint" android:inputType="textPassword" android:id="@+id/passwordInput"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/login_button_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/validate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="doLogin"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>