<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.InfoActivity">

    <TextView
            android:text="@string/info_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/info_title"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/info_photo_icon"
            android:layout_marginTop="32dp"
            android:scaleType="centerInside"
            app:layout_constraintTop_toBottomOf="@+id/info_title" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/info_longitude_text"
            android:contentDescription="@string/info_alt_photo_icon"/>
    <TextView
            android:text="@string/info_location_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/info_latitude_text"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/info_title"
            app:layout_constraintStart_toEndOf="@+id/info_photo_icon"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/info_longitude_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/info_latitude_text"
            app:layout_constraintStart_toStartOf="@+id/info_latitude_text"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:layout_editor_absoluteX="145dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/info_photo_icon"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/info_contacts_recycler"
            android:scrollbars="vertical"/>
</android.support.constraint.ConstraintLayout>